# unilog

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-ubuntu-x86_64.yml
cmake/: unilogConfig.cmake.in
examples/: CMakeLists.txt  basic_example.c  interrupt_example.c
include/unilog/: unilog.h
src/: unilog.c
tests/: CMakeLists.txt  test_basic.c  test_buffer.c  test_signal.c  test_threadsafe.c
